--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             const password = document.getElementById('password').value;
 
             // Beispiel-Benutzername und -Passwort
-            const correctUsername = 'admin';
-            const correctPassword = 'password';
+            const correctUsername = 'RowdyRoosters';
+            const correctPassword = 'Fifi';
 
             if (username === correctUsername && password === correctPassword) {
                 document.querySelector('.login-container').style.display = 'none';
