--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-image: url('https://wallpapers.com/images/high/4k-minecraft-grass-brick-v5wc3y3guxv68xhk.webp');
+            background-image: url('https://de.wallpapers.com/wallpapers/4k-minecraft-grasziegel-v5wc3y3guxv68xhk.html');
             background-size: cover;
             background-position: center;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
