--- a/index.html
+++ b/index.html
@@ -111,7 +111,56 @@
     </div>
 
     <script>
-        function login() {
+        // Konfigurationsparameter
+        const CONFIG = {
+            EMAIL: 'dein-email@example.com',  // Ersetze dies mit deiner TP-Link Tapo E-Mail
+            PASSWORD: 'dein-passwort',        // Ersetze dies mit deinem TP-Link Tapo Passwort
+            DEVICE_IP: 'deine-gerät-ip',      // Ersetze dies mit der IP-Adresse deines Smart Plugs
+        };
+
+        async function login() {
+            const response = await fetch('https://eu-wap.tplinkcloud.com/', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    method: 'login',
+                    params: {
+                        appType: 'Tapo',
+                        cloudUserName: CONFIG.EMAIL,
+                        cloudPassword: CONFIG.PASSWORD
+                    }
+                })
+            });
+            const data = await response.json();
+            return data.result.token;
+        }
+
+        async function controlDevice(command, params) {
+            const token = await login();
+            const url = `https://eu-wap.tplinkcloud.com/?token=${token}`;
+            const response = await fetch(url, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    method: 'passthrough',
+                    params: {
+                        deviceId: CONFIG.DEVICE_IP,
+                        requestData: JSON.stringify({
+                            method: command,
+                            params: params
+                        })
+                    }
+                })
+            });
+            const data = await response.json();
+            console.log(data);
+        }
+
+        function loginCheck() {
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
             const errorMessage = document.getElementById('error-message');
@@ -128,19 +177,19 @@
             }
         }
 
-        document.getElementById('start').addEventListener('click', function() {
-            console.log('Starting');
-            // Hier kannst du einen API-Aufruf hinzufügen, um den Server zu starten
+        document.getElementById('start').addEventListener('click', function () {
+            controlDevice('set_device_info', { "device_on": true });
         });
 
-        document.getElementById('stop').addEventListener('click', function() {
-            console.log('Stopping');
-            // Hier kannst du einen API-Aufruf hinzufügen, um den Server zu stoppen
+        document.getElementById('stop').addEventListener('click', function () {
+            controlDevice('set_device_info', { "device_on": false });
         });
 
-        document.getElementById('restart').addEventListener('click', function() {
-            console.log('Restarting');
-            // Hier kannst du einen API-Aufruf hinzufügen, um den Server neu zu starten
+        document.getElementById('restart').addEventListener('click', async function () {
+            await controlDevice('set_device_info', { "device_on": false });
+            setTimeout(() => {
+                controlDevice('set_device_info', { "device_on": true });
+            }, 5000); // 5 Sekunden warten, bevor der Plug wieder eingeschaltet wird
         });
     </script>
 </body>
