--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-image: url('https://wallpapers.com/images/high/4k-minecraft-grass-brick-v5wc3y3guxv68xhk.webp');
+            background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
             background-size: cover;
             background-position: center;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -245,4 +245,3 @@
     </script>
 </body>
 </html>
-
