--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
     <script>
         // Konfigurationsparameter
         const CONFIG = {
-            EMAIL: 'dein-email@example.com',  // Ersetze dies mit deiner TP-Link Tapo E-Mail
-            PASSWORD: 'dein-passwort',        // Ersetze dies mit deinem TP-Link Tapo Passwort
-            DEVICE_IP: 'deine-gerät-ip',      // Ersetze dies mit der IP-Adresse deines Smart Plugs
-            WEB_USERNAME: 'RowdyRoosters',    // Benutzername für die Website-Anmeldung
-            WEB_PASSWORD: 'Fifi'              // Passwort für die Website-Anmeldung
+            EMAIL: 'knolliwood@gmx.at',          // Ersetze dies mit deiner TP-Link Tapo E-Mail
+            PASSWORD: 'Server123',               // Ersetze dies mit deinem TP-Link Tapo Passwort
+            DEVICE_IP: '192.168.68.141',         // Ersetze dies mit der IP-Adresse deines Smart Plugs
+            WEB_USERNAME: 'RowdyRoosters',       // Benutzername für die Website-Anmeldung
+            WEB_PASSWORD: 'Fifi'                 // Passwort für die Website-Anmeldung
         };
 
         async function login() {
