--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraftserver</title>
+    <title>Minecraftserver Control</title>
     <style>
         body {
             display: flex;
@@ -11,9 +11,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-image: url('https://de.wallpapers.com/wallpapers/4k-minecraft-grasziegel-v5wc3y3guxv68xhk.html');
-            background-size: cover;
-            background-position: center;
+            background: url('https://wallpapercave.com/wp/wp10264363.jpg') no-repeat center center/cover;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
@@ -35,6 +33,8 @@
             padding: 40px;
             border-radius: 12px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            max-width: 400px;
+            width: 90%;
         }
 
         h1 {
@@ -43,9 +43,9 @@
         }
 
         input[type="text"], input[type="password"] {
-            padding: 15px;
+            padding: 12px;
             margin: 10px 0;
-            width: calc(100% - 30px);
+            width: calc(100% - 24px);
             font-size: 16px;
             border: 1px solid #ccc;
             border-radius: 8px;
@@ -62,35 +62,11 @@
             transition: background-color 0.3s ease, transform 0.2s ease;
         }
 
-        button#start {
-            background-color: #4CAF50; /* Green */
-            color: white;
-        }
+        button#start { background-color: #4CAF50; color: white; }
+        button#stop { background-color: #f44336; color: white; }
+        button#restart { background-color: #ff9800; color: white; }
 
-        button#stop {
-            background-color: #f44336; /* Red */
-            color: white;
-        }
-
-        button#restart {
-            background-color: #ff9800; /* Orange */
-            color: white;
-        }
-
-        button:hover {
-            transform: translateY(-2px);
-            opacity: 0.9;
-        }
-
-        .login-button {
-            background-color: #4CAF50; /* Green */
-            color: white;
-        }
-
-        .error-message {
-            color: red;
-            margin-top: 15px;
-        }
+        button:hover { transform: translateY(-2px); opacity: 0.9; }
 
         .status {
             display: flex;
@@ -99,23 +75,19 @@
             margin-bottom: 20px;
         }
 
-        .status span {
-            margin-left: 10px;
-            font-size: 18px;
-        }
-
         .status-icon {
             width: 20px;
             height: 20px;
             border-radius: 50%;
         }
 
-        .online {
-            background-color: #4CAF50; /* Green */
-        }
+        .online { background-color: #4CAF50; }
+        .offline { background-color: #f44336; }
 
-        .offline {
-            background-color: #f44336; /* Red */
+        .error-message {
+            color: red;
+            margin-top: 15px;
+            display: none;
         }
     </style>
 </head>
@@ -125,8 +97,8 @@
         <h1>Login</h1>
         <input type="text" id="username" placeholder="Benutzername">
         <input type="password" id="password" placeholder="Passwort">
-        <button class="login-button" onclick="loginCheck()">Login</button>
-        <div class="error-message" id="error-message" style="display: none;">Falscher Benutzername oder Passwort</div>
+        <button id="loginBtn">Login</button>
+        <div class="error-message" id="error-message">Falscher Benutzername oder Passwort</div>
     </div>
 
     <div class="container" style="display: none;">
@@ -141,106 +113,97 @@
     </div>
 
     <script>
-        // Konfigurationsparameter
-        const CONFIG = {
-            EMAIL: 'knolliwood@gmx.at',          // Ersetze dies mit deiner TP-Link Tapo E-Mail
-            PASSWORD: 'Server123',               // Ersetze dies mit deinem TP-Link Tapo Passwort
-            DEVICE_IP: '192.168.68.141',         // Ersetze dies mit der IP-Adresse deines Smart Plugs
-            WEB_USERNAME: 'RowdyRoosters',       // Benutzername für die Website-Anmeldung
-            WEB_PASSWORD: 'Fifi'                 // Passwort für die Website-Anmeldung
-        };
+        const USERNAME = "RowdyRoosters";
+        const PASSWORD = "Fifi";
 
-        async function login() {
-            const response = await fetch('https://eu-wap.tplinkcloud.com/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
+        document.getElementById("loginBtn").addEventListener("click", function () {
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
+            if (username === USERNAME && password === PASSWORD) {
+                document.querySelector(".login-container").style.display = "none";
+                document.querySelector(".container").style.display = "block";
+                checkStatus();
+            } else {
+                document.getElementById("error-message").style.display = "block";
+            }
+        });
+
+        async function controlDevice(command) {
+            const response = await fetch("https://eu-wap.tplinkcloud.com/", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
-                    method: 'login',
+                    method: "login",
                     params: {
-                        appType: 'Tapo',
-                        cloudUserName: CONFIG.EMAIL,
-                        cloudPassword: CONFIG.PASSWORD
+                        cloudUserName: "DEINE_EMAIL",
+                        cloudPassword: "DEIN_PASSWORT"
                     }
                 })
             });
-            const data = await response.json();
-            return data.result.token;
-        }
 
-        async function controlDevice(command, params) {
-            const token = await login();
+            const data = await response.json();
+            if (!data.result || !data.result.token) {
+                console.error("Login fehlgeschlagen");
+                return;
+            }
+
+            const token = data.result.token;
             const url = `https://eu-wap.tplinkcloud.com/?token=${token}`;
-            const response = await fetch(url, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
+
+            await fetch(url, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
-                    method: 'passthrough',
+                    method: "passthrough",
                     params: {
-                        deviceId: CONFIG.DEVICE_IP,
+                        deviceId: "DEINE_DEVICE_ID",
                         requestData: JSON.stringify({
-                            method: command,
-                            params: params
+                            method: "set_device_info",
+                            params: { device_on: command === "on" }
                         })
                     }
                 })
             });
-            const data = await response.json();
-            return data;
+
+            checkStatus();
         }
 
         async function checkStatus() {
-            try {
-                const result = await controlDevice('get_device_info', {});
-                if (result.error_code === 0) {
-                    document.getElementById('status-icon').classList.remove('offline');
-                    document.getElementById('status-icon').classList.add('online');
-                    document.getElementById('status-text').innerText = 'Online';
-                } else {
-                    throw new Error('Device not reachable');
-                }
-            } catch (error) {
-                document.getElementById('status-icon').classList.remove('online');
-                document.getElementById('status-icon').classList.add('offline');
-                document.getElementById('status-text').innerText = 'Offline';
-            }
-        }
+            const response = await fetch("https://eu-wap.tplinkcloud.com/", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    method: "passthrough",
+                    params: {
+                        deviceId: "DEINE_DEVICE_ID",
+                        requestData: JSON.stringify({
+                            method: "get_device_info"
+                        })
+                    }
+                })
+            });
 
-        function loginCheck() {
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
-            const errorMessage = document.getElementById('error-message');
+            const data = await response.json();
+            const statusIcon = document.getElementById("status-icon");
+            const statusText = document.getElementById("status-text");
 
-            if (username === CONFIG.WEB_USERNAME && password === CONFIG.WEB_PASSWORD) {
-                document.querySelector('.login-container').style.display = 'none';
-                document.querySelector('.container').style.display = 'block';
-                checkStatus(); // Status nach dem Login prüfen
+            if (data.result && data.result.device_on) {
+                statusIcon.classList.remove("offline");
+                statusIcon.classList.add("online");
+                statusText.innerText = "Online";
             } else {
-                errorMessage.style.display = 'block';
+                statusIcon.classList.remove("online");
+                statusIcon.classList.add("offline");
+                statusText.innerText = "Offline";
             }
         }
 
-        document.getElementById('start').addEventListener('click', function () {
-            controlDevice('set_device_info', { "device_on": true });
-            checkStatus();
-        });
-
-        document.getElementById('stop').addEventListener('click', function () {
-            controlDevice('set_device_info', { "device_on": false });
-            checkStatus();
-        });
-
-        document.getElementById('restart').addEventListener('click', async function () {
-            await controlDevice('set_device_info', { "device_on": false });
-            setTimeout(() => {
-                controlDevice('set_device_info', { "device_on": true });
-                checkStatus();
-            }, 5000); // 5 Sekunden warten, bevor der Plug wieder eingeschaltet wird
+        document.getElementById("start").addEventListener("click", () => controlDevice("on"));
+        document.getElementById("stop").addEventListener("click", () => controlDevice("off"));
+        document.getElementById("restart").addEventListener("click", async () => {
+            await controlDevice("off");
+            setTimeout(() => controlDevice("on"), 5000);
         });
     </script>
 </body>
 </html>
-
