--- a/index.html
+++ b/index.html
@@ -140,20 +140,101 @@
         <button id="restart">Restart</button>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsSHA/3.2.0/sha256.js"></script>
     <script>
+        // SHA-256 Implementierung in JavaScript
+        function sha256(ascii) {
+            var mathPow = Math.pow;
+            var maxWord = mathPow(2, 32);
+            var lengthProperty = 'length';
+            var i, j; // Used as a counter across the whole file
+            var result = '';
+
+            var words = [];
+            var asciiBitLength = ascii[lengthProperty] * 8;
+
+            // Caching results is optional - remove/add slash from front of this line to toggle
+            // var hash = sha256.h = sha256.h || [];
+            // var k = sha256.k = sha256.k || [];
+            var hash = [], k = [];
+
+            var primeCounter = k[lengthProperty];
+            // var hash = [], k = [];
+            // var primeCounter = 0;
+
+            var isComposite = {};
+            for (var candidate = 2; primeCounter < 64; candidate++) {
+                if (!isComposite[candidate]) {
+                    for (i = 0; i < 313; i += candidate) {
+                        isComposite[i] = candidate;
+                    }
+                    hash[primeCounter] = (mathPow(candidate, .5) * maxWord) | 0;
+                    k[primeCounter++] = (mathPow(candidate, 1 / 3) * maxWord) | 0;
+                }
+            }
+
+            ascii += '\x80'; // Append Ƈ' bit (plus zero padding)
+            while (ascii[lengthProperty] % 64 - 56) ascii += '\x00'; // More zero padding
+            for (i = 0; i < ascii[lengthProperty]; i++) {
+                j = ascii.charCodeAt(i);
+                if (j >> 8) return; // ASCII check: only accept characters in range 0-255
+                words[i >> 2] |= j << ((3 - i) % 4) * 8;
+            }
+            words[words[lengthProperty]] = ((asciiBitLength / maxWord) | 0);
+            words[words[lengthProperty]] = (asciiBitLength);
+
+            for (j = 0; j < words[lengthProperty];) {
+                var w = words.slice(j, j += 16); // The message is expanded into 64 words as part of the iteration
+                var oldHash = hash;
+                // This is now the "working hash", often labelled as variables a...g
+                hash = hash.slice(0, 8);
+
+                for (i = 0; i < 64; i++) {
+                    var i2 = i + j;
+                    // Expand the message into 64 words
+                    // Used below if 
+                    var w15 = w[i - 15], w2 = w[i - 2];
+
+                    // Iterate
+                    var a = hash[0], e = hash[4];
+                    var temp1 = hash[7]
+                        + (e >> 6 | e << 26) ^ (e >> 11 | e << 21) ^ (e >> 25 | e << 7) // Σ1
+                        + ((e & hash[5]) ^ ((~e) & hash[6])) // Ch
+                        + k[i]
+                        // Expand the message schedule if needed
+                        + (w[i] = (i < 16) ? w[i] : (
+                            w[i - 16]
+                            + (w15 >> 7 | w15 << 25) ^ (w15 >> 18 | w15 << 14) ^ (w15 >>> 3) // σ0
+                            + w[i - 7]
+                            + (w2 >> 17 | w2 << 15) ^ (w2 >> 19 | w2 << 13) ^ (w2 >>> 10) // σ1
+                        ) | 0);
+                    // This is only used once, so *could* be moved below, but it only saves 4 bytes and makes things unreadble
+                    var temp2 = (a >> 2 | a << 30) ^ (a >> 13 | a << 19) ^ (a >> 22 | a << 10) // Σ0
+                        + ((a & hash[1]) ^ (a & hash[2]) ^ (hash[1] & hash[2])); // Maj
+
+                    hash = [(temp1 + temp2) | 0].concat(hash); // We don't bother splitting two assignments
+                    hash[4] = (hash[4] + temp1) | 0;
+                }
+
+                for (i = 0; i < 8; i++) {
+                    hash[i] = (hash[i] + oldHash[i]) | 0;
+                }
+            }
+
+            for (i = 0; i < 8; i++) {
+                for (j = 3; j + 1; j--) {
+                    var b = (hash[i] >> (j * 8)) & 255;
+                    result += ((b < 16) ? 0 : '') + b.toString(16);
+                }
+            }
+            return result;
+        }
+
         // Konfigurationsparameter
         const CONFIG = {
             DEVICE_IP: 'deine-gerät-ip',      // Ersetze dies mit der IP-Adresse deines Shelly Plugs
             WEB_USERNAME_HASH: 'a3f1c9ac7dcddd7e1e0b1b4e1d5d2462e6b4c4db5fddd5f1c4a1c6d1a9d6e6c9', // SHA-256 Hash für "RowdyRoosters"
             WEB_PASSWORD_HASH: 'f9a77e03d6bdfc9e4a067e158b312d8a7de582e36bba51b0c4d0192b1ef5b2d8' // SHA-256 Hash für "Fifi"
         };
-
-        function hashInput(input) {
-            let shaObj = new jsSHA("SHA-256", "TEXT");
-            shaObj.update(input);
-            return shaObj.getHash("HEX");
-        }
 
         async function controlDevice(command) {
             const url = `http://${CONFIG.DEVICE_IP}/rpc/Switch.Set${command}`;
@@ -192,7 +273,7 @@
             const password = document.getElementById('password').value;
             const errorMessage = document.getElementById('error-message');
 
-            if (hashInput(username) === CONFIG.WEB_USERNAME_HASH && hashInput(password) === CONFIG.WEB_PASSWORD_HASH) {
+            if (sha256(username) === CONFIG.WEB_USERNAME_HASH && sha256(password) === CONFIG.WEB_PASSWORD_HASH) {
                 document.querySelector('.login-container').style.display = 'none';
                 document.querySelector('.container').style.display = 'block';
                 checkStatus(); // Status nach dem Login prüfen
